--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,9 @@
     "twig/twig": "~1.0",
     "guzzlehttp/guzzle": "~6.0"
   },
+  "require-dev" : {
+    "phpunit/phpunit": "^5"
+  },
   "autoload": {
     "psr-4": {
       "GoldInvestment\\": "app/"
